[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/CodeSnippetPopup/Secondary/SnippetEditor.gd" type="Script" id=1]

[sub_resource type="Image" id=1]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 1 )
size = Vector2( 16, 16 )

[node name="SnippetEditor" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
window_title = "Snippet Editor"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_right = 1890.0
margin_bottom = 1055.0

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer"]
margin_right = 994.0
margin_bottom = 531.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer/HBoxContainer"]
margin_right = 491.0
margin_bottom = 531.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 491.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" type="LineEdit" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 109.0
margin_bottom = 26.0
hint_tooltip = "Quick access via F key (when non-input node is focused)."
focus_neighbour_left = NodePath("../../../../HBoxContainer2/SaveButton")
size_flags_horizontal = 3
clear_button_enabled = true
right_icon = SubResource( 2 )
placeholder_text = "Filter..."
caret_blink = true
caret_blink_speed = 0.5

[node name="AddButton" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 113.0
margin_right = 168.0
margin_bottom = 26.0
hint_tooltip = "Quick access via A key (when non-input node is focused).
"
text = "Add"
icon = SubResource( 2 )

[node name="DeleteButton" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 224.0
margin_bottom = 26.0
hint_tooltip = "Quick access via Del key (when non-input node is focused)."
text = "Del"
icon = SubResource( 2 )

[node name="RenameButton" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 228.0
margin_right = 310.0
margin_bottom = 26.0
hint_tooltip = "Quick access via R key (when non-input node is focused).

Rename the selected snippet (only one at a time)."
text = "Rename"
icon = SubResource( 2 )

[node name="MoveUpButton" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 314.0
margin_right = 342.0
margin_bottom = 26.0
hint_tooltip = "Quick access via W key (when non-input node is focused).

Move 1 item a position up. 
This is only intended for simple movement. For complex rearrangemnt it is probably easier to directly edit the cfg file. Access it via the Src Button. "
icon = SubResource( 2 )

[node name="MoveDownButton" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 346.0
margin_right = 374.0
margin_bottom = 26.0
hint_tooltip = "Quick access via S key (when non-input node is focused).

Move 1 item a position down. 
This is only intended for simple movement. For complex rearrangment it is probably easier to directly edit the cfg file. Access it via the Src Button. "
icon = SubResource( 2 )

[node name="SrcButton" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 378.0
margin_right = 427.0
margin_bottom = 26.0
hint_tooltip = "Quick access via C key (when non-input node is focused).

Open the folder where the snippet config fle is saved. 
By default the config and the settings file are saved in user://../ (see Godot's get_user_data_dir() documentation)"
text = "Src"
icon = SubResource( 2 )

[node name="HelpButton" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 431.0
margin_right = 491.0
margin_bottom = 26.0
hint_tooltip = "Quick access via H key (when non-input node is focused)."
text = "Help"
icon = SubResource( 2 )

[node name="ItemList" type="ItemList" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 491.0
margin_bottom = 531.0
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="Main/VBoxContainer/HBoxContainer"]
modulate = Color( 0, 0, 0, 0 )
margin_left = 495.0
margin_right = 499.0
margin_bottom = 531.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Main/VBoxContainer/HBoxContainer"]
margin_left = 503.0
margin_right = 994.0
margin_bottom = 531.0
size_flags_horizontal = 3

[node name="MainTextEdit" type="TextEdit" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 491.0
margin_bottom = 237.0
hint_tooltip = "Quick access via B key (when non-input node is focused).

[@X] = Jump markers; use of the same number will mirror code

[@X:OptionA,OptionB] = Dropdown options

Press Esc to abort the jumping"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/symbol_color = Color( 1, 0.937255, 0.211765, 1 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
highlight_all_occurrences = true
caret_blink = true

[node name="QuickNoteLabel" type="Label" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0.521569 )
margin_top = 241.0
margin_right = 491.0
margin_bottom = 255.0
hint_tooltip = "Quick access via Q key (when non-input node is focused).

The QuickInfo is optional and will appear in the snippet list but greyed out. It won't be inserted when activating a snippet. It should be short. Otherwise the snippet list will have trouble formatting correctly."
mouse_filter = 1
text = "Quick note:"
valign = 1

[node name="AdditionalInfo" type="TextEdit" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 259.0
margin_right = 491.0
margin_bottom = 309.0
rect_min_size = Vector2( 0, 50 )
hint_tooltip = "Quick access via Q key (when non-input node is focused).

The QuickInfo is optional and will appear in the snippet list but greyed out. It won't be inserted when activating a snippet. It should be short. Otherwise the snippet list will have trouble formatting correctly."
draw_tabs = true
highlight_all_occurrences = true
wrap_enabled = true
caret_blink = true

[node name="OtherInfoLabel" type="Label" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0.521569 )
margin_top = 313.0
margin_right = 491.0
margin_bottom = 327.0
hint_tooltip = "Quick access via O key (when non-input node is focused).

The OtherInformation is also optional. It can be anything - ranging from a description to other notes. The length doesn't matter here. It will appear as a tooltip in the snippet list."
mouse_filter = 1
text = "Other information:"
valign = 1

[node name="OtherInfo" type="TextEdit" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 331.0
margin_right = 491.0
margin_bottom = 531.0
rect_min_size = Vector2( 0, 200 )
hint_tooltip = "Quick access via O key (when non-input node is focused).

The OtherInformation is also optional. It can be anything - ranging from a description to other notes. The length doesn't matter here. It will appear as a tooltip in the snippet list."
draw_tabs = true
highlight_all_occurrences = true
wrap_enabled = true
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Main/VBoxContainer"]
margin_left = 397.0
margin_top = 535.0
margin_right = 597.0
margin_bottom = 575.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 4

[node name="CancelButton" type="Button" parent="Main/VBoxContainer/HBoxContainer2"]
margin_left = 13.0
margin_top = 9.0
margin_right = 85.0
margin_bottom = 31.0
rect_min_size = Vector2( 65, 0 )
hint_tooltip = "Quick access via Esc key."
focus_neighbour_left = NodePath("../../HBoxContainer/TextEdit")
focus_neighbour_right = NodePath("../SaveButton")
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Cancel"
icon = SubResource( 2 )

[node name="SaveButton" type="Button" parent="Main/VBoxContainer/HBoxContainer2"]
margin_left = 118.0
margin_top = 9.0
margin_right = 183.0
margin_bottom = 31.0
rect_min_size = Vector2( 65, 0 )
focus_neighbour_left = NodePath("../CancelButton")
focus_neighbour_right = NodePath("../../HBoxContainer/VBoxContainer/HBoxContainer/Filter")
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Save"
icon = SubResource( 2 )

[node name="Help" type="WindowDialog" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 596.0
window_title = "Help"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Help"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Help/MarginContainer"]
margin_right = 976.0
margin_bottom = 552.0

[node name="Label" type="Label" parent="Help/MarginContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 14.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Help/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 960.0
margin_bottom = 460.0
size_flags_vertical = 3
text = "If you  want to edit the snippet file manually, the file uses a INI-style structure.:
The [section] is the snippet name and it is the name which will appear in the snippet list.
\"body\" (without quotations marks) is the only key which has to be defined. 
\"additional_info\" is optional and will appear in the snippet list but greyed out. It won't be inserted when activating a snippet. 
\"other_info\" is also optional and will be shown as a tooltip in the snippet list.

Use [@X] in your snippets, where X is an integer, to mark the position(s) the cursor jumps to. Once the snippet has been inserted into the code editor, you can jump with the cursor to the [@X] marker in the text using the shortcut key (Ctrl+E by default). The numerical order of the tabstops will be respected. If you use a number multiple times, the code you used at the first jump marker will be mirrored to the other markers with the same number. 

You can add a placeholder/dropdown options by separating the options by commas. For example: [@1:OptionA,OptionB] will be the first position the cursor will jump to after the snippet has been inserted. A popup window will open with \"OptionA\" and \"OptionB\" as choices under the text cursor position.

If you use multiple jump markers, DON'T manually navigate around in the code editor or edit the jump markers as this may mess it up. Use the auto-jumping instead. If you want to abort the jumping, press Esc. If the dropdown choice popup is visible, you will need to press Esc twice (once to escape the choice popup and a second time to escape the jumping).

--------------------------------

Examples:

[Example1]
body=\"\\\"This is the main body, which gets inserted.  [@1] HERE is the first mark the cursor position jumps to after the snippet has been inserted. The mark will however not be included during the insertion.. 
You can have multiple jump positions. For ex. After THIS [@3] is the second jump position. You can escape the jumping by pressing Esc.\"
additional_info=\"Click the 'Edit' button to see how I work. Feel free to delete me!\"

[---- Mirrored/dropdown var example. ----]
body = \"var [@1:array,arr,test] : Array
for [@2:i] in [@1].size(): # mirrored from the line above
	print([@2])
return [@1] # then jump to here [@7] and next
# no [@4:nom,nim,num,nam] test [@4][@8]\"
additional_info=\"Just another example you can delete.\""
readonly = true
wrap_enabled = true

[node name="SnippetNameDialog" type="WindowDialog" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 596.0
rect_min_size = Vector2( 225, 50 )
window_title = "Snippet name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SnippetNameDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="SnippetNameDialog/MarginContainer"]
margin_top = 274.0
margin_right = 996.0
margin_bottom = 298.0
size_flags_vertical = 6
clear_button_enabled = true
caret_blink = true
caret_blink_speed = 0.5

[node name="SaveConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -88.5
margin_right = 200.0
margin_bottom = 88.5
rect_min_size = Vector2( 400, 70 )
window_title = "Potential Error Detected!"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="." to="." method="_on_SnippetEditor_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_SnippetEditor_popup_hide"]
[connection signal="text_changed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Filter" to="." method="_on_Filter_text_changed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/RenameButton" to="." method="_on_RenameButton_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/MoveUpButton" to="." method="_on_MoveUpButton_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/MoveDownButton" to="." method="_on_MoveDownButton_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/SrcButton" to="." method="_on_SrcButton_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="gui_input" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_gui_input"]
[connection signal="item_selected" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="multi_selected" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_multi_selected"]
[connection signal="focus_exited" from="Main/VBoxContainer/HBoxContainer/VBoxContainer2/MainTextEdit" to="." method="_on_MainTextEdit_focus_exited"]
[connection signal="text_changed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer2/MainTextEdit" to="." method="_on_TextEditors_text_changed"]
[connection signal="focus_exited" from="Main/VBoxContainer/HBoxContainer/VBoxContainer2/AdditionalInfo" to="." method="_on_AdditionalInfo_focus_exited"]
[connection signal="text_changed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer2/AdditionalInfo" to="." method="_on_TextEditors_text_changed"]
[connection signal="focus_exited" from="Main/VBoxContainer/HBoxContainer/VBoxContainer2/OtherInfo" to="." method="_on_OtherInfo_focus_exited"]
[connection signal="text_changed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer2/OtherInfo" to="." method="_on_TextEditors_text_changed"]
[connection signal="gui_input" from="Main/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_CancelButton_gui_input"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="popup_hide" from="SnippetNameDialog" to="." method="_on_SnippetNameDialog_popup_hide"]
[connection signal="text_entered" from="SnippetNameDialog/MarginContainer/LineEdit" to="." method="_on_SnippetNameLineEdit_text_entered"]
[connection signal="confirmed" from="SaveConfirmationDialog" to="." method="_on_SaveConfirmationDialog_confirmed"]
[connection signal="popup_hide" from="SaveConfirmationDialog" to="." method="_on_SaveConfirmationDialog_popup_hide"]
